syntax = "proto3";
package gateway;

option go_package = "wcs/service/gateway/protocol;protocol";
import "google/protobuf/timestamp.proto";
import "api/common/c_message.proto";
import "api/common/c_worker.proto";
import "api/core/chat.proto";

// 登录成功后, 下发必须信息
message SCHi {
  int64 id = 1;
  // 下面均为 h5/web 使用
  string token = 2;
  // 绑定客服(如果有的话)
  int32 worker_id = 3;
}

message CSForward {
  string appId = 1;
  string url = 2;
  string verb = 3;
  bytes data = 4;
}

message SCForward {
  string err = 2;
  bytes data = 3;
}

// 发消息
message CSSendMessage {
  api.common.Message msg = 1;
}

// 发消息确认
message SCSendMessage {
  int64 chat_id = 1;
  int64 msg_id = 2;
  google.protobuf.Timestamp msg_time = 3;
}

// 收消息
message SCRecvMessage {
  api.common.Message msg = 1;
  int64 target = 2;
}

// 收消息确认
message CSRecvMessage {
  int64 chat_id = 1;
  int64 msg_id = 2;
}

// 读消息
message CSReadMessage {
  int64 chat_id = 1;
  int64 msg_id = 2;
}

message SCReadMessage {
  int64 chat_id = 1;
  int64 msg_id = 2;
}

// 正在输入(发送):开始
message InputtingBegin {
  // 无需处理
  int64 self = 1;
  // 终端用户无需处理, 客服传指定目标用户的clientId
  int64 target = 2;
  api.common.MessageFormat msg_fmt = 3;
}

// 正在输入(发送):结束
// 注意: MSG_TEXT, MSG_GEO 无需调用
message InputtingEnd {
  // 无需处理
  int64 self = 1;
  // 终端用户无需处理, 客服传指定目标用户的clientId
  int64 target = 2;
}

// 转接客服操作, 通知给 新的客服 + 用户
message WorkerTransfer {
  api.common.Message msg = 1;
}

enum ChatChanged {
  CHAT_CHANGED_UNKNOWN = 0;
  // 新的聊天会话
  CHAT_CHANGED_ADD = 1;
  // 移除聊天会话
  CHAT_CHANGED_DEL = 2;
}

// 新的聊天(客服用)
message SCChatChanged {
  ChatChanged ty = 1;
  // 因为何种原因 增加 删除
  api.common.ChatState reason = 2;
  int64 chat_id = 3;
  int64 target = 4;
}

// 用户上线
message SCUserConnectionChanged {
  // 用户的 client_id (chat_id)
  int64 client_id = 1;
  api.common.ConnectState conn = 2;
  int64 target = 3;
}

message SCWorkerChanged {
  string worker_name = 1;
  string worker_avatar = 2;
  int64 target = 3;
}